src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>quot__Actual_Hours__c</fullName>
        <description>Actual number of hours spent resolving this case.</description>
        <inlineHelpText>Actual number of hours spent resolving this case.</inlineHelpText>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quot__Agreed_to_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the customer agrees to the statement of work on the authorization request page.</description>
        <inlineHelpText>Checked when the customer agrees to the statement of work on the authorization request page.</inlineHelpText>
        <label>Agreed to SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quot__Auth_Payment_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the first authorization or payment is processed in response to a support authorization request.</description>
        <inlineHelpText>Checked when the first authorization or payment is processed in response to a support authorization request.</inlineHelpText>
        <label>Auth/Payment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quot__Auth_Payment_Timestamp__c</fullName>
        <description>Timestamp of the payment or authorization completed after requesting a support authorization.  Subsequent payments or authorizations will not change this timestamp unless another request is sent.</description>
        <inlineHelpText>Timestamp of the payment or authorization completed after requesting a support authorization.  Subsequent payments or authorizations will not change this timestamp unless another request is sent.</inlineHelpText>
        <label>Auth/Payment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>quot__Auth_Request_Expiration__c</fullName>
        <description>Date the current support authorization request expires. Hides the SiteSupportAuth page after expiration.</description>
        <inlineHelpText>Date the current support authorization request expires. Hides the SiteSupportAuth page after expiration.</inlineHelpText>
        <label>Auth Request Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>quot__Auth_Request_Pending__c</fullName>
        <description>Indicates when a support authorization has been sent, but a payment or authorization has not yet been completed and applied to the case.  A batch script checks for payments on a periodic basic.</description>
        <formula>IMAGE(  IF( quot__Publish_Auth_Request__c = true, IF ( quot__Auth_Request_Expiration__c &lt; TODAY(), &quot;/img/samples/flag_red.gif&quot;,&quot;/img/samples/flag_green.gif&quot;),  &quot;/s.gif&quot;),  &quot;Pending Support Auth Request Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates when a support authorization has been sent, but a payment or authorization has not yet been completed and applied to the case.  A batch script checks for payments on a periodic basic.</inlineHelpText>
        <label>Auth Request Pending</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quot__Authorization_Amount__c</fullName>
        <description>Total support authorization amount. (Auth Hours * Rate)</description>
        <formula>IF (AND (ISNULL(quot__Authorization_Hours__c),ISNULL(quot__Rate__c)),null, quot__Authorization_Hours__c *  quot__Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total support authorization amount. (Auth Hours * Rate)</inlineHelpText>
        <label>Authorization Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quot__Authorization_Hours__c</fullName>
        <description>Total hours requested on current support authorization. Displayed on SiteSupportAuth page to customer.</description>
        <inlineHelpText>Total hours requested on current support authorization. Displayed on SiteSupportAuth page to customer.</inlineHelpText>
        <label>Authorization Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quot__Estimated_Hours__c</fullName>
        <description>Total hours requested on current support authorization. Displayed on SiteSupportAuth page to customer.</description>
        <inlineHelpText>Total hours requested on current support authorization. Displayed on SiteSupportAuth page to customer.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quot__Processed_Payment_Id__c</fullName>
        <description>Record ID of the most recent completed payment processed for this case and applied as a support auth request payment.</description>
        <inlineHelpText>Record ID of the most recent completed payment processed for this case and applied as a support auth request payment.</inlineHelpText>
        <label>Processed Payment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quot__Publish_Auth_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows customers to submit an online support authorization for the current case.</description>
        <inlineHelpText>Allows customers to submit an online support authorization for the current case.</inlineHelpText>
        <label>Publish Auth Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quot__Rate__c</fullName>
        <description>Hourly rate to use for billable hours on this case.</description>
        <inlineHelpText>Hourly rate to use for billable hours on this case.</inlineHelpText>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quot__Request_Timestamp__c</fullName>
        <description>Timestamp of most recent support auth request (set when published)</description>
        <inlineHelpText>Timestamp of most recent support auth request (set when published)</inlineHelpText>
        <label>Request Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>quot__Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorization Only</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>quot__Statement_of_Work_RT__c</fullName>
        <description>Rich text field use for statement of work if Quotes and Invoices is configured to use the SF rich text editor on Cases</description>
        <label>Statement of Work</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>quot__Statement_of_Work__c</fullName>
        <description>HTML content describing the work to be done under the current support ticket. Displayed on the SiteSupportAuth page to customers.</description>
        <inlineHelpText>HTML content describing the work to be done under the current support ticket. Displayed on the SiteSupportAuth page to customers.</inlineHelpText>
        <label>Statement of Work</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
    </listViews>
    <listViews>
        <fullName>InternationalPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>InternationalSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PartnerRelations</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
    </listViews>
    <listViews>
        <fullName>USEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
    </listViews>
    <listViews>
        <fullName>USPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>USSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
    </listViews>
    <listViews>
        <fullName>quot__Cases_With_Open_Authorization_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>quot__Auth_Request_Pending__c</columns>
        <columns>quot__Auth_Request_Expiration__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>quot__Authorization_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>quot__Publish_Auth_Request__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cases With Open Authorization Requests</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>